# pali-sutta-readings.github.io

./: .gitignore  404.html  LICENSE  Makefile  README.md  README.org  feed.xml  feed_rss_updated.xml  index.html  mkdocs.yml  prompts.org  pyproject.toml  sitemap.xml
2023-readings/: Makefile  pali-readings-2023.org  pali-readings-weavers-daughter-dhp174.org  pali-readings-with-sentence-analysis.tex  pali-readings.org  pali-readings.tex
docs/: index.md  notifications.md  pali-chanting-word-by-word.md  pali-lessons.md  tools-resources.md  topics.md
notifications/: index.html
overrides/: main.html
pali-chanting-word-by-word/: index.html
pali-lessons/: Makefile  export-init.el  index.html  pali-cheatsheet-small.org  pali-cheatsheet-small.tex  pali-cheatsheet.org  pali-lessons-preamble.tex  pali-lessons.org  pali-lessons.tex  vinaya-class-questions.sty  vocabulary-words.tex  vocabulary.sty
readings/: index.html
scripts/: anki_vocab_front.mako.html  compile_tex.sh  convert_once.sh  export-reading-vocab-to-anki.py  org-to-md-convert-watcher.sh  org_to_md.py  org_to_md.sh  org_to_md_convert_watcher.sh  publish.sh  reading-for-upload.sh
search/: search_index.json
sessions/: 2025-01-08.org  2025-01-15.org  2025-01-22.org  2025-02-05.org  2025-02-13.org  2025-02-19.org  2025-02-27.org  2025-03-05.org  2025-03-06.org  2025-04-02.org  2025-04-03.org  2025-04-16.org  2025-04-23.org  2025-04-30.org  2025-05-14.org  2025-05-21.org  2025-05-28.org  2025-06-03.org  2025-06-04.org  2025-06-11.org  2025-06-18.org  2025-06-24.org  2025-07-11.org  2025-07-15.org  (+30 more)
(+131 files in other folders)
